# svg_mobile_app

./: FCM_NOTIFICATION_SETUP_GUIDE.md  README.md  bcc_email_testing_guide.md  cursor_review_user_doctype_and_email_fu.md  frappe@vmi2187306 ~frappe-bench.txt  gmail_bcc_auto_forwarder.gs  hooks.py  multi_level_approval_guide.md  pyproject.toml  test_email_genius.py
.cursor/: mcp-alternative.json  mcp.json
.cursor/rules/: memory_tool_usage_guide.mdc
Emails Proposed Technical Solution/: EmailsProposedTechnicalSolution.html
orbit/: README.md  hooks.py  pyproject.toml
orbit/orbit/config/: desktop.py
svg_mobile_app/: EMAIL_SYSTEM_README.md  Gmail_SMTP_PHP_Configuration_Guide.md  Google_Drive_ERPNext_Integration_Guide.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION_NOTES.md  MEETING_AUTOMATION_README.md  alternative_navbar_approach.md  api.py  debugging_checklist.md  diagnostic_script.py  file.txt  hooks.py  modules.txt  navbar.py  oauth_handlers.py  patches.txt  permissions.py  workflow_diagram.md
svg_mobile_app/client script inside/: Comments HTML.js  Create claim with items ratio.js  Fetch and Calculations.js  Filtering Items based on the company.js  Follow Up HTML Enhancements.js  Make Journal Entry For Claims in details.js  Switch Payment Mode and Recreate Journal Entry.js  Update to Opportunity.js  attebdabce rule full function.js  calculate duration.js  calculate profit value.js  calculate total items.js  communication_custom.js  create aditional salary.js  create meeting minutes.js  create team tasks.js  creating sales invoice.js  erpnext_instance_fixes.md  (+8 more)
(+675 files in other folders)
